# afxdp-load-balancer

./: Cargo.toml  README.md  config.json
agave-afxdp/: Cargo.toml  README.md
agave-afxdp/src/: device.rs  lib.rs  netlink.rs  packet.rs  program.rs  route.rs  socket.rs  tx_loop.rs  umem.rs
load-balancer/: Cargo.toml  build.rs
load-balancer-common/: Cargo.toml
load-balancer-common/src/: lib.rs
load-balancer-ebpf/: Cargo.toml
load-balancer-ebpf/src/: main.rs
load-balancer/src/: config.rs  connections_balancer.rs  connections_manager.rs  lib.rs  main.rs  process.rs  router.rs  tcp_connections_handler.rs
tcp-servers/: Cargo.toml
tcp-servers/src/: main.rs
