[package]
name = "agave-afxdp"
description = "Agave XDP implementation"
edition = "2021"

[dependencies]
crossbeam-channel = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
caps = { workspace = true }
