[package]
name = "load-balancer-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
load-balancer-common = { path = "../load-balancer-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "load-balancer"
path = "src/main.rs"
